k8s/tst/verdure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verdure-be-deployment
spec:
  replicas: 2
  minReadySeconds: 20
  selector:
    matchLabels:
      component: verdure-be
  template:
    metadata:
      labels:
        component: verdure-be
    spec:
      containers:
        - name: server
          image: heatherss92065/palabras-be-image
          ports:
            - containerPort: 3030
      imagePullSecrets:
        - name: paldockerhubsecret
---
apiVersion: v1
kind: Service
metadata:
  name: verdure-be-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: verdure-be
  ports:
    - port: 3030
      targetPort: 3030
